<resources>
    <string name="app_name">Smart Fees</string>
    <string name="action_staff">Staff</string>
    <string name="action_out">Sign out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_name">Company Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_weight">Weight</string>
    <string name="prompt_regi_num">Registration Number</string>
    <string name="prompt_date">Date</string>
    <string name="action_register">Register</string>
    <string name="title_activity_staffs">Staffs</string>

    <array name="fees_status" >
        <item> Paid </item>
        <item> Not Paid </item>
    </array>
</resources>
